# debug_automation

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  alembic.ini
bugfix_ai/: .env.example  .gitignore  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt
bugfix_ai/api/: main.py  scheduler.py
bugfix_ai/api/middleware/: auth.py
bugfix_ai/api/routers/: health.py  ingest.py  issues.py  session.py
bugfix_ai/categorization/: __init__.py  excel_exporter.py  nlp_classifier.py  pipeline.py  rules.py  schema.py  service.py
bugfix_ai/config/: issue_taxonomy.yaml  logging_config.py  model_constants.py  settings.py  terminal_allowlist.yaml
bugfix_ai/core/: app_factory.py  checkpointer.py  graph.py  llm_client.py  state.py
bugfix_ai/integrations/github/: client.py  graphql_client.py  issues_client.py  issues_parser.py  parser.py  poller.py
bugfix_ai/integrations/terminal/: safe_executor.py
bugfix_ai/memory/: embed.py  fix_store.py  rules_db.py  vector_store.py
bugfix_ai/memory/retrieval/: hybrid_retriever.py  rrf.py
bugfix_ai/nodes/: classify.py  intake.py
bugfix_ai/nodes/assist/: consent_gate.py  present_similar.py  rrf_rank.py  rule_filter.py  semantic_retrieve.py
bugfix_ai/nodes/autonomous/: execute_step.py  hitl_checkpoint.py  load_fix_plan.py  manual_fallback.py  pre_execute_review.py
bugfix_ai/nodes/capture/: __init__.py  emit_new_issue.py  extract_steps.py  finalize.py  (+3 more)
bugfix_ai/observability/: decision_logger.py  metrics.py  mlflow_tracker.py
bugfix_ai/rl/: preference_store.py  ruler.py  sft_exporter.py  trajectory_collector.py
(+25 files in other folders)
