[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugfix-ai"
version = "0.1.0"
description = "AI-assisted debugging memory and execution system, powered by GPT-oss-20B"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["bugfix_ai*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  # Tests that need a live Postgres + Qdrant (provisioned by the
  # `integration-tests.yml` workflow's `services:` block). Excluded
  # from the default CI run via `-m "not integration"`.
  "integration: requires the Phase 2 stack (Postgres + Qdrant)",
]
